--- a/overlay/common/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/common/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -38,7 +38,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night,theme,caffeine,adb_network
+        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night,theme,caffeine,adb_network,heads_up
     </string>
 
     <!-- Smart replies in notifications: Whether we disable the feature unless the app targets P -->
@@ -48,6 +48,10 @@
     <bool name="doze_display_state_supported">true</bool>
 
     <!-- Launcher package name for overlaying icons. -->
+    <string name="launcher_overlayable_package" translatable="false">com.google.android.apps.nexuslauncher</string>
+
+</resources>
+ Launcher package name for overlaying icons. -->
     <string name="launcher_overlayable_package" translatable="false">com.google.android.apps.nexuslauncher</string>
 
 </resources>
